--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <footer>
   <div class="social-media">
     <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook"></a>
-    <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"></a>
+    <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram"  id="instagram"></a>
     <a href="pages/contact.html" class="fa fa-envelope" id="envelope"></a>
   </div>
 </footer>
