--- a/pages/contact.html
+++ b/pages/contact.html
@@ -64,8 +64,8 @@
           <hr class="intro-divider">
           <div class="social-media">
             <h6>Blijf op de hoogte door me te volgen op Facebook / Instagram</h6>
-            <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook" style="color: #ab858c"></a>
-            <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram" style="color: #ab858c" id="instagram"></a>
+            <a href="https://www.facebook.com/profile.php?id=100091218855077" class="fa fa-facebook" style="color: #ab858c; font-size : 50px;"></a>
+            <a href="https://www.instagram.com/tineke_photography/" class="fa fa-instagram" style="color: #ab858c; font-size : 50px;" id="instagram"></a>
           </div>
         </div>
       </div>
