--- a/pages/contact.html
+++ b/pages/contact.html
@@ -95,13 +95,13 @@
         <option>Huisdieren shoot</option>
         <option>Koppel/duo shoot</option>
         <option>Familie shoot</option>
-        <option>Persoonlijke/one shoot</option>
+        <option>Individuele shoot</option>
         <option>Interesse in een andere shoot?</option>
       </select><br>
       <p>Berichtje</p>
       <textarea name="Message" placeholder="Berichtje" required class="inputbox"></textarea>
       <br><br>
-      <button  class="button-send" type="submit" id="inputbox"> Versturen</button>
+      <button  class="button-send" type="submit" id="inputbox" placeholder="Versturen"> Versturen</button>
     </form>
     </p>
   </div>
