--- a/pages/contact.html
+++ b/pages/contact.html
@@ -119,7 +119,7 @@
       Fotoshoot op maat, naar eigen wens<br><br>
       Liefdevolle, spontane en speelse foto's<br><br>
       Het resultaat zal je doen lachen en kan je voor de rest van je leven koesteren.<br><br>
-      * Gelieve rekening te houden dat de fotoshoot verplaatst moet worden als het weer het niet toe laat.
+      * Gelieve er rekening mee te houden dat de fotoshoot verplaatst moet worden als het weer het niet toe laat.
     </p>
   </div>
 </div>
@@ -132,7 +132,7 @@
     <p class="overlay__description">
     <ul>
       <li>Zorg voor matching outfits, het is mogelijk om in verschillende outfits de shoot te doen.</li> <br>
-      <li>Draag kleren waar je u comfortabel in voelt.</li> <br>
+      <li>Draag kleren waar je  comfortabel in voelt.</li> <br>
       <li> Ideetjes kunnen altijd op voorhand besproken worden zodat alle attributen aanwezig zijn.</li><br>
     </ul>
     </p>
