--- a/pages/contact.html
+++ b/pages/contact.html
@@ -101,7 +101,7 @@
       <p>Berichtje</p>
       <textarea name="Message" placeholder="Berichtje" required class="inputbox"></textarea>
       <br><br>
-      <button  class="button-send" type="submit" id="inputbox" name="versturen" placeholder="Versturen">Versturen</button>
+      <button  class="button-send" type="submit" id="inputbox" style="color: black;">Versturen</button>
     </form>
     </p>
   </div>
