--- a/pages/contact.html
+++ b/pages/contact.html
@@ -60,7 +60,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="intro-message">
-          <h1>Contact1</h1>
+          <h1>Contact</h1>
           <hr class="intro-divider">
           <div class="social-media">
             <h6>Blijf op de hoogte door me te volgen op Facebook / Instagram</h6>
