--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="card-body">
       <h2 class="card-title1">Waarom zou u kiezen voor Tineke Photography?</h2>
       <span class="card-description subtle">
-        <li>Gediplomineerd fotograaf</li><br>
+        <li>Gediplomeerde fotograaf</li><br>
         <li>Fotoshoot tegen een laag tarief van 75 euro</li><br>
         <li>Een album met 20 bewerkte foto's</li><br>
         <li>Alle foto's worden professioneel nabewerkt</li><br>
