--- a/pages/contact.html
+++ b/pages/contact.html
@@ -82,7 +82,7 @@
       Fotoshoots zijn uitsluitend in het weekend.
     </p>
     <p class="overlay__description">
-    <form action="https://formspree.io/f/mbjezgqz" method="POST">
+    <form action="https://formspree.io/f/mwkjdpwq" method="POST">
       <p>Naam + voornaam</p>
       <input type="text" name="Name" placeholder="Naam + voornaam" required class="inputbox">
       <p>Email</p>
