--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="header-img-wrapper">
       <div class="header-title-wrapper">
         <div class="name">
-          <h1>Tineke <br>Photography</h1>
+          <h1 style="font-family: Arima Madurai;">Tineke <br>Photography</h1>
         </div>
       </div>
       <!--<div class="header-img-overlay"></div>-->
@@ -109,9 +109,9 @@
     <div class="card-body">
       <h2 class="card-title1">Waarom zou u kiezen voor Tineke Photography?</h2>
       <span class="card-description subtle">
-        <li>Gediplomeerde fotograaf</li><br>
+        <li>Gediplomeerd fotograaf</li><br>
         <li>Fotoshoot tegen een laag tarief van 75 euro</li><br>
-        <li>Een album met 20 bewerkte foto's</li><br>
+        <li>Een digitaal album met 20 bewerkte foto's</li><br>
         <li>Alle foto's worden professioneel nabewerkt</li><br>
         <li>Een fotoshoot duurt doorgaans een uurtje</li><br>
         <li>Fotoshoot op maat, naar eigen wens</li><br>
