--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="header-img-wrapper">
       <div class="header-title-wrapper">
         <div class="name">
-          <h1 style="font-family: Arima Madurai;">Tineke <br>Photography</h1>
+          <h1>Tineke <br>Photography</h1>
         </div>
       </div>
       <!--<div class="header-img-overlay"></div>-->
