--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <img src="img/pages/duo_shoot/10.JPG" alt="collage_homepage_1">
         <img src="img/pages/one_shoot/2.jpg" alt="collage_homepage_2">
         <img src="img/pages/animal_shoot/7.JPG" alt="collage_homepage_3">
-        <img src="img/pages/duo_shoot/9.jpg" alt="collage_homepage_4">
+        <img src="img/pages/animal_shoot/17.jpg" alt="collage_homepage_4">
         <img src="img/pages/one_shoot/8.jpg" alt="collage_homepage_5">
         <img src="img/pages/animal_shoot/15.jpg" alt="collage_homepage_6">
         <img src="img/pages/one_shoot/19.jpg" alt="collage_homepage_7">
